# AvContentsRec

./: .gitignore  CMakeLists.txt  README.md  main.cpp  package.json
AvContentsLib/: CMakeLists.txt  README.md  main.cpp
ContentsGrab/: actor_title.py  docker-compose.yml  dynamic_crawler.py
docs/: 요구사항 정의.docx
include/: cppcms_sample_client.h  cppcms_sample_server.h
src/client/: cppcms_sample_client.cpp
src/server/: cppcms_sample_server.cpp
